--- a/Metaprogramming/into_map_demo/into_map_derive/Cargo.toml
+++ b/Metaprogramming/into_map_demo/into_map_derive/Cargo.toml
@@ -4,6 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+proc-macro=true
 
 [dependencies]
-syn
+syn={version="0.15.44",features=["extra-traits"]}
+quote="0.6.13"
+into_map={path="../into_map"}
